--- a/config/tester_xiao.conf
+++ b/config/tester_xiao.conf
@@ -1,5 +1,5 @@
 # Put configuration options here
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_BOARD="seeed_xiao_ble"
-CONFIG_ZMK_SHIELD_LEFT="tester_xiao_left"
-CONFIG_ZMK_SHIELD_RIGHT="tester_xiao_right"
+# CONFIG_ZMK_BOARD="seeed_xiao_ble"
+# CONFIG_ZMK_SHIELD_LEFT="tester_xiao_left"
+# CONFIG_ZMK_SHIELD_RIGHT="tester_xiao_right"
